# fastapi-architecture

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml
app/: exceptions.py
app/auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
app/config/: base.py
app/database/: base.py  repository.py
app/database/migrations/: env.py
app/database/migrations/versions/: 11e46588a4f8_create_users_table.py
app/database/models/: user.py
app/users/: repository.py  router.py  schemas.py  service.py
app/utils/: schemas.py
